Fix dishwasher_washzone options
If we put Off, then we can never set it because Off will not map to any of the options.

--- a/packages/dishwasher.yaml
+++ b/packages/dishwasher.yaml
@@ -198,7 +198,7 @@ mqtt:
         } %}
         {{ map[value] if value in map }}
       options:
-        - "Off"
+        - "Both"
         - "Lower"
         - "Upper"
       device:
